fixed search result overflow bug

--- a/static/css/shared.css
+++ b/static/css/shared.css
@@ -158,6 +158,7 @@ input:focus {
   display: none;
   z-index: 101;
   margin-top: 10px;
+  word-wrap: break-word;
 
   border: 1px solid #ddd;
   /*border-radius: 0.25em;*/
